[workspace]
members = [
    "gpio",
    "test-main",
    "pilock",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = [ "TheChilliPL <chilli@thechilli.dev>" ]
license = "MIT"

[workspace.dependencies]
pilock_gpio = { path = "gpio" }
log = "0.4.26"
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["local-offset"] }
