[package]
name = "pilock"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
pilock_gpio.workspace = true
log.workspace = true
pretty_env_logger = "0.5.0"
sysinfo = "0.35.1"
dotenv = "0.15.0"
thiserror.workspace = true
time.workspace = true
eyre = "0.6.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
crabtime = "1.1.3"
